--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
     <link rel="stylesheet" href="css/owl.theme.default.css">
 <!--    <link rel="stylesheet" href="css/styless.css">-->
 
-    <link rel="stylesheet" href="css/Styles.css">
+<!--    <link rel="stylesheet" href="css/Styles.css">-->
+    <link rel="stylesheet" href="css/styless.css">
     <link rel="stylesheet" href="css/media.css">
+
+
 </head>
 
 
